# practice

./: .gitignore  .gitmodules  README.md  status.md  update_status.py
.cargo/: config.toml
advent-of-code/: .gitignore
binary-trees/: Cargo.toml
binary-trees/src/: pretty_print.rs
dailyprogrammer/: README.md
dailyprogrammer/239-a-game-of-threes/: Cargo.toml
dailyprogrammer/254-easy-atbash-cipher/: Cargo.toml
dailyprogrammer/286-easy-reverse-factorial/: Cargo.toml
dailyprogrammer/302-easy-spelling-with-chemistry/: Cargo.toml
dailyprogrammer/302-spelling-with-chemistry/: element_names.txt
dailyprogrammer/320-easy-spiral-ascension/: Cargo.toml
dailyprogrammer/326-easy-nearest-prime-numbers/: Cargo.toml
dailyprogrammer/346-easy-cryptarithmetic-solver/: Cargo.toml
dailyprogrammer/348-hard-square-sum-chains/: Cargo.toml
dailyprogrammer/355-medm-possible-number-of-pies-linear-programming/: Cargo.toml
dailyprogrammer/356-medm-goldbachs-weak-conjecture/: Cargo.toml
dailyprogrammer/357-hard-continued-fractions/: Cargo.toml
dailyprogrammer/359-hard-primes-in-grids/: Cargo.toml  input.txt
dailyprogrammer/364-medm-the-ducci-sequence/: Cargo.toml
dailyprogrammer/366-easy-word-funnel-1/: Cargo.toml
dutch-flag/: Cargo.toml  README.md
minesweeper-solver/: main.py
primality_utils/: Cargo.toml
qr-code/: Cargo.toml
shorelark-genetic-algorithm/: README.md
smaller-projects/st_petersburg_paradox/: Cargo.toml
smaller-projects/st_petersburg_paradox/benches/: rolling_avg_bench.rs
smaller-projects/st_petersburg_paradox/src/: lib.rs  main.rs
(+103 files in other folders)
